# norns-db

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: error.rs  handlers.rs  main.rs  models.rs
api/src/telemetry/: logs.rs  metrics.rs  mod.rs  traces.rs
dbcore/: Cargo.toml
dbcore/src/: error.rs
engine/: Cargo.toml
engine/src/: column.rs  config.rs  lib.rs  primary_key.rs  row.rs  table.rs
engine/src/database/: mod.rs  tests.rs
journal/: Cargo.toml
journal/src/: handle.rs  journal.rs  journal_record.rs  lib.rs  record.rs  tests.rs  writer_worker.rs
playground/: Cargo.toml
playground/src/: main.rs
storage/: Cargo.toml
storage/src/: io.rs  lib.rs
storage/src/bit_map/: mod.rs  tests.rs
storage/src/bloom_filter/: mod.rs  tests.rs
storage/src/lsm_tree/: active_memtable.rs  compaction_worker.rs  flush_worker.rs  frozen_memtables.rs  lock_utils.rs  mod.rs  state.rs  storage.rs  tests.rs  value.rs
storage/src/ss_table/: mod.rs  tests.rs
