[workspace]
resolver = "3"
members = ["api", "dbcore", "engine", "journal", "playground", "storage"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]

arc-swap = "1.8.2"
axum = "0.8"
bincode = "2.0.1"
crc-fast = "1.10.0"
dbcore = { path = "./dbcore" }
envconfig = "0.11.1"
itertools = "0.14.0"
journal = { path = "./journal" }
metrics = "0.24"
metrics-exporter-opentelemetry = "0.2"
metrics-exporter-prometheus = { version = "0.16", features = ["http-listener"] }
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry-appender-tracing = "0.31"
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "reqwest-blocking-client", "reqwest-rustls", "trace", "metrics", "logs", "internal-logs"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
siphasher = "1.0.2"
storage = { path = "./storage" }
thiserror = "2.0.18"
tokio = "1.50.0"
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
