[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]

axum = { workspace = true }
dbcore = { workspace = true }
engine = { path = "../engine" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal"] }
