[package]
name = "engine"
version.workspace = true
edition.workspace = true

[dependencies]

bincode = { workspace = true }
dbcore = { workspace = true }
envconfig = { workspace = true }
journal = { workspace = true }
storage = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
