[package]
name = "journal"
version.workspace = true
edition.workspace = true

[dependencies]
dbcore = { workspace = true }

bincode = { workspace = true }
crc-fast = { workspace = true }
metrics = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }
