[package]
name = "journal"
version.workspace = true
edition.workspace = true

[dependencies]

bincode = { workspace = true }
crc-fast = { workspace = true }
dbcore = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
