[package]
name = "playground"
version.workspace = true
edition.workspace = true
description = "Vibecoded and manual scripts for kinda testing things in integration"

[dependencies]

console-subscriber = "0.5.0"
engine = { path = "../engine" }
metrics-exporter-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
