[package]
name = "playground"
version.workspace = true
edition.workspace = true
description = "Vibecoded and manual scripts for kinda testing things in integration"

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
