[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]

arc-swap = "1.8.2"
bincode = { workspace = true }
dbcore = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
siphasher = { workspace = true }
tracing = { workspace = true }
